--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,11 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <a href="/users/twitter">Sign in with Twitter</a>
+    <% if (user) { %>
+      <p>
+        logged in
+      </p>
+      <a href="/users/logout">Log out again</a>
+    <% } %>
   </body>
 </html>
