--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body {
 
 nav {
   background-color: #563D7C;
-  height: 80px;
+  height: 60px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -64,4 +64,36 @@ h1 {
 }
 h2 {
   font-size: 20px;
+}
+
+#resultsList {
+  padding: 0;
+}
+
+#resultsList li {
+  list-style: none;
+  margin: 5px auto;
+  display: flex;
+  align-items: center;
+  background: #563D7C;
+}
+
+#resultsList h4 {
+  margin: 10px;
+  color: white;
+  width: 200px;
+  text-align: left;
+}
+
+#resultsList p {
+  margin: 0 10px;
+  color: white;
+  font-style: italic;
+}
+
+#resultsList img {
+  margin: 5px;
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
 }
