--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,43 +5,29 @@ body {
   box-sizing: content-box;
 }
 
-nav {
-  background-color: #563D7C;
-  height: 60px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-nav > ul {
-  padding: 0;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-nav li {
-  list-style: none;
-}
-
-nav a {
-  padding: 10px;
-  background: white;
+a.btn {
+  padding: 5px;
+  color: white;
+  border: 2px solid white;
   text-decoration: none;
+  border-radius: 1px;
 }
 
 input {
   font: inherit;
   padding: 10px;
-  box-sizing: inherit;
+  border: 2px solid #563D7C;
+  border-radius: 1px;
 }
 
 button {
   padding: 10px;
-  border: 2px solid #563D7C;
-  background: white;
-  color: #563D7C;
+  border: none;
+  border-radius: 1px;
+  background: #563D7C;
+  color: white;
   font: inherit;
+  height: 40px;
 }
 
 .wrapper {
@@ -74,26 +60,67 @@ h2 {
   list-style: none;
   margin: 5px auto;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   background: #563D7C;
-}
-
-#resultsList h4 {
-  margin: 10px;
-  color: white;
-  width: 200px;
-  text-align: left;
-}
-
-#resultsList p {
-  margin: 0 10px;
-  color: white;
-  font-style: italic;
+  border-radius: 1px;
 }
 
 #resultsList img {
   margin: 5px;
   height: 100px;
-  width: 100px;
+  width: 33%;
   object-fit: cover;
+  border-radius: 1px;
+}
+
+#resultsList .barInfo {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#resultsList header {
+  display: flex;
+  align-items: center;
+  height: 55px;
+}
+
+#resultsList header h3 {
+  margin: 10px;
+  color: white;
+  width: 50%;
+}
+
+#resultsList header a {
+  margin: 5px;
+  width: 50%;
+}
+
+#resultsList header a.going{
+  color: #563D7C;
+  background-color: white;
+}
+
+
+#resultsList .barDetails {
+  color: white;
+  display: flex;
+  height: 55px;
+  align-items: center
+}
+
+#resultsList .rating {
+  display: block;
+  width: 50%;
+}
+
+#resultsList .price {
+  display: block;
+  width: 50%;
+}
+
+@media (min-width: 600px) {
+  .lg-hide {
+    display: none;
+  }
 }
